--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -26,6 +26,7 @@ ng_module(
     ],
 )
 
+
 # This devserver is written in Go and is super-fast.
 # It doesn't run any bundler or code splitter. Instead, it concatenates
 # UMD JavaScript code on-the-fly in-memory.
@@ -53,7 +54,7 @@ ts_devserver(
         "@npm//node_modules/tslib:tslib.js",
         "@npm//node_modules/@angular/material:prebuilt-themes/deeppurple-amber.css",
         "@npm//node_modules/@ngrx/store:bundles/store.umd.min.js",
-        "index.html",
+        ":index_html",
     ],
     # Tell Bazel to build the sources first
     deps = ["//src"],
@@ -79,41 +80,27 @@ rollup_bundle(
     ],
 )
 
-# Copy zone.min.js to this package.
-# Needed because the prodserver only loads static files that appear under this
-# package.
-genrule(
-    name = "copy_zonejs",
-    srcs = ["@npm//node_modules/zone.js:dist/zone.min.js"],
-    outs = ["zone.min.js"],
-    cmd = "cp $< $@",
-)
+load(":web_package.bzl", "web_package")
 
-# See comment for zonejs above
-genrule(
-    name = "copy_systemjs",
-    srcs = ["@npm//node_modules/systemjs:dist/system.js"],
-    outs = ["system.js"],
-    cmd = "cp $< $@",
-)
-
-# See comment for zonejs above
-genrule(
-    name = "copy_material_theme",
-    srcs = ["@npm//node_modules/@angular/material:prebuilt-themes/deeppurple-amber.css"],
-    outs = ["deeppurple-amber.css"],
-    cmd = "cp $< $@",
+web_package(
+    name = "prodapp",
+    index_html = "index.html",
+    # do not sort
+    assets = [
+        "@npm//node_modules/@angular/material:prebuilt-themes/deeppurple-amber.css",
+        "@npm//node_modules/zone.js:dist/zone.min.js",
+        "@npm//node_modules/systemjs:dist/system.js",
+        ":bundle.min.js",
+    ],
+    data = [
+        ":bundle",
+    ],
 )
 
 load("@build_bazel_rules_nodejs//:defs.bzl", "history_server")
 
 history_server(
     name = "prodserver",
-    data = [
-        "index.html",
-        ":bundle",
-        ":copy_material_theme",
-        ":copy_systemjs",
-        ":copy_zonejs",
-    ],
+    data = [":prodapp"],
+    templated_args = ["src/www"],
 )
