--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -2,7 +2,7 @@ package(default_visibility = ["//visibility:public"])
 
 load("@angular//:index.bzl", "ng_module")
 load("@build_bazel_rules_typescript//:defs.bzl", "ts_config", "ts_devserver")
-load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "web_package", "history_server")
+load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "web_package", "history_server", "inject_html")
 
 ts_config(
     name = "tsconfig-test",
@@ -27,6 +27,18 @@ ng_module(
     ],
 )
 
+inject_html(
+    name = "index",
+    index_html = "index.html",
+    assets = [
+        "@npm//node_modules/@angular/material:prebuilt-themes/deeppurple-amber.css",
+    ],
+    inject = [
+        "bundle.js",
+    ],
+)
+
+
 # This devserver is written in Go and is super-fast.
 # It doesn't run any bundler or code splitter. Instead, it concatenates
 # UMD JavaScript code on-the-fly in-memory.
@@ -35,26 +47,26 @@ ts_devserver(
     name = "devserver",
     # serve these files rooted at /
     additional_root_paths = [
-        "npm/node_modules/zone.js/dist",
-        "npm/node_modules/tslib",
         "npm/node_modules/@angular/material/prebuilt-themes",
         "npm/node_modules/@ngrx/store/bundles",
     ],
     # Start from the development version of the main
     entry_module = "angular_bazel_example/src/main.dev",
+    bootstrap = [
+        "@npm//node_modules/zone.js:dist/zone.min.js",
+    ],
     scripts = [
         ":require.config.js",
         ":module-id.js",
+        "@npm//node_modules/tslib:tslib.js",
     ],
     # This is the URL we'll point our <script> tag at
-    serving_path = "/bundle.min.js",
+    serving_path = "/bundle.js",
     # Serve these files in addition to the JavaScript bundle
     static_files = [
-        "@npm//node_modules/zone.js:dist/zone.min.js",
-        "@npm//node_modules/tslib:tslib.js",
         "@npm//node_modules/@angular/material:prebuilt-themes/deeppurple-amber.css",
         "@npm//node_modules/@ngrx/store:bundles/store.umd.min.js",
-        ":index_html",
+        ":index"
     ],
     # Tell Bazel to build the sources first
     deps = ["//src"],
