--- a/src/BUILD.bazel
+++ b/src/BUILD.bazel
@@ -2,7 +2,7 @@ package(default_visibility = ["//visibility:public"])
 
 load("@angular//:index.bzl", "ng_module")
 load("@build_bazel_rules_typescript//:defs.bzl", "ts_config", "ts_devserver")
-load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "web_package", "history_server", "inject_html")
+load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "web_package", "history_server")
 
 ts_config(
     name = "tsconfig-test",
@@ -27,18 +27,6 @@ ng_module(
     ],
 )
 
-inject_html(
-    name = "index",
-    index_html = "index.html",
-    assets = [
-        "@npm//node_modules/@angular/material:prebuilt-themes/deeppurple-amber.css",
-    ],
-    inject = [
-        "bundle.js",
-    ],
-)
-
-
 # This devserver is written in Go and is super-fast.
 # It doesn't run any bundler or code splitter. Instead, it concatenates
 # UMD JavaScript code on-the-fly in-memory.
@@ -52,9 +40,12 @@ ts_devserver(
     ],
     # Start from the development version of the main
     entry_module = "angular_bazel_example/src/main.dev",
+    # Zone.js should be included in the JS bundle before require.js
     bootstrap = [
         "@npm//node_modules/zone.js:dist/zone.min.js",
     ],
+    # These scripts will be included in the JS bundle after require.js
+    # They should have only named UMD modules, or require.js will throw.
     scripts = [
         ":require.config.js",
         ":module-id.js",
@@ -66,8 +57,8 @@ ts_devserver(
     static_files = [
         "@npm//node_modules/@angular/material:prebuilt-themes/deeppurple-amber.css",
         "@npm//node_modules/@ngrx/store:bundles/store.umd.min.js",
-        ":index"
     ],
+    index_html = "index.html",
     # Tell Bazel to build the sources first
     deps = ["//src"],
 )
